@@ -139,6 +139,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - tmpMsg is drawn from GameEngine::drawOverlays()
   - logo, version and stats are drawn in MainMenu::drawOverlay()
 **** TODO Start to handle Local test
+     CLOCK: [2017-03-30 jeu. 00:17]--[2017-03-30 jeu. 00:38] =>  0:21
      CLOCK: [2017-03-29 mer. 23:48]--[2017-03-30 jeu. 00:03] =>  0:15
      CLOCK: [2017-03-29 mer. 22:15]--[2017-03-29 mer. 22:43] =>  0:28
      CLOCK: [2017-03-29 mer. 19:35]--[2017-03-29 mer. 20:43] =>  1:08
@@ -184,22 +185,25 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] World generation with Seed textedit and random button 
 	Must add the random button to seed
     - [X] Should inject passed time to CEGUI	
-    - [-] Should send keyboard input to CEGUI
+    - [X] Should send keyboard input to CEGUI
       This bug occurs in all game states
       - [X] Char is correctly sent
-      - [ ] Should send these events to gamestate
+      - [X] Should send these events to gamestate
 	 return true if event is used
     - [-] Should we rely on a server's class to generate the new world ?
       - [X] should be compiled as a shared lib used by both server & client	
-      - [ ] something server::load(worldconfig) or server::generate(config)
+      - [ ] something like server::load(worldconfig) or server::generate(config)
+    - [ ] Global gamestate button : Back/Play  
+      The global Play button should only be enabled if a world is available
     - [ ] For the existing world tab, we must have a RGL function
       that returns existing local worlds
       - [ ] We need to free librlgl first
       - [ ] Then add rlgl as a git submodule in ext/
       - [ ] Then implement and use the getLocalWorlds() function
-    - [ ] Global gamestate button : Back/Play  
-      The global Play button should only be enabled if a world is available
+     - [ ] Random seed may come from a RLGL function
+       Because the seed could come from another function than simply rand()
   - [ ] Implement LocalTest overriden functions
+    Save/Restore state functions
 - [ ] Launch an embedded server
 - [ ] See if we can generate a first landscape
 **** TODO Some wiki work
